tests/baselines/reference/stringLiteralsErrors.errors.txt
==== tests/cases/compiler/stringLiteralsErrors.ts (17 errors) ====
    // Srtings missing line terminator
    var es1 = "line 1
                     
!!! error TS1002: Unterminated string literal.
    ";
      
!!! error TS1002: Unterminated string literal.
    var es2 = 'line 1
                     
!!! error TS1002: Unterminated string literal.
    ';
      
!!! error TS1002: Unterminated string literal.
    
    // Space after backslash
    var es3 = 'line 1\ 
                       
!!! error TS1002: Unterminated string literal.
    ';
      
!!! error TS1002: Unterminated string literal.
    var es4 = 'line 1\ 
                       
!!! error TS1002: Unterminated string literal.
    ';
      
!!! error TS1002: Unterminated string literal.
    
    // Unterminated strings
    var es5 = "unterminated
                           
!!! error TS1002: Unterminated string literal.
    var es6 = 'unterminated
                           
!!! error TS1002: Unterminated string literal.
    
    // wrong terminator
    var es7 = "unterminated '
                             
!!! error TS1002: Unterminated string literal.
    var es8 = 'unterminated "
                             
!!! error TS1002: Unterminated string literal.
    
    // wrong unicode sequences
    var es9 = "\u00";
                   
!!! error TS1125: Hexadecimal digit expected.
    var es10 = "\u00GG";
                    
!!! error TS1125: Hexadecimal digit expected.
    var es11 = "\x0";
                   
!!! error TS1125: Hexadecimal digit expected.
    var es12 = "\xmm";
                  
!!! error TS1125: Hexadecimal digit expected.
    
    // End of file
    var es13 = " 
                 
!!! error TS1126: Unexpected end of text.